updated data and code for RQ1 and RQ4

--- a/analyze_results.ipynb
+++ b/analyze_results.ipynb
@@ -89,8 +89,8 @@
     "order_metric = \"chm\"\n",
     "groupby = [\"application\", \"configuration\"]\n",
     "groupby_data = dict()\n",
-    "groupby_data[\"application\"] = ['plants', 'petclinic-legacy', 'acmeair', 'daytrader', 'roller']\n",
-    "groupby_data[\"configuration\"] = ['Sequential', 'Flattened', 'CombSequential']\n",
+    "groupby_data[\"application\"] = ['plants', 'petclinic-legacy', 'acmeair', 'daytrader', 'jforum', 'social-edition-modular', 'roller']\n",
+    "groupby_data[\"configuration\"] = ['Sequential', 'Flattened', 'CombSequential', 'CombFlattened']\n",
     "metrics = [\"chm\", \"chd\", \"icp\", \"ned\", \"cov\"]"
    ],
    "metadata": {
@@ -109,6 +109,8 @@
     "dfs = list()\n",
     "a = \"rldec\"\n",
     "for app in groupby_data[\"application\"]:\n",
+    "    if app not in groupby_data[\"application\"]:\n",
+    "        continue\n",
     "    df = pd.read_csv(os.path.join(logs_path, a, app, \"results.csv\"), index_col=0)\n",
     "    df[\"application\"] = app\n",
     "    df[\"configuration\"] = df.apply(lambda x: re.fullmatch(r\"(\\S*)DQN\\d*/.*\", x[\"exp_id\"])[1], axis=1)\n",
@@ -187,56 +189,37 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# generate the barplot in a single figure (change save from None to a figure name to save the image)\n",
-    "save = \"fig_rq1_barplots\"\n",
-    "sns.set_theme()\n",
-    "fig, axes = plt.subplots(1, len(metrics), figsize=(40,5))\n",
-    "for i, m in enumerate(metrics):\n",
-    "    g = sns.barplot(\n",
-    "        data=df,\n",
-    "        x=\"application\", y=m, hue=\"configuration\",\n",
-    "        order=groupby_data[\"application\"], hue_order=groupby_data[\"configuration\"],\n",
-    "        ax = axes[i], alpha=0.8\n",
-    "    )\n",
-    "    g.grid(False)\n",
-    "    g.set_xlabel(\"\")\n",
-    "    g.set_ylabel(m.upper(), rotation=90, size='large')\n",
-    "    g.legend().set_title(\"\")\n",
-    "plt.title(\"\")\n",
-    "if save is not None:\n",
-    "    plt.savefig(os.path.join(fig_path, \"{}.pdf\".format(save)),bbox_inches='tight')\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "# generate the barplot individually (change save from None to a figure name to save the images)\n",
     "sns.set_theme()\n",
+    "sns.set(font_scale=2.5)\n",
     "for i, m in enumerate(metrics):\n",
-    "    fig, axes = plt.subplots(1, 1, figsize=(12,5))\n",
-    "    save = None #f\"fig_rq1_barplots_{m}\"\n",
+    "    fig, axes = plt.subplots(1, figsize=(40, 10))\n",
     "    g = sns.barplot(\n",
     "        data=df,\n",
     "        x=\"application\", y=m, hue=\"configuration\",\n",
     "        order=groupby_data[\"application\"], hue_order=groupby_data[\"configuration\"],\n",
-    "        alpha=0.8\n",
+    "        ax = axes, alpha=0.8\n",
     "    )\n",
+    "    num_apps = len(df.application.unique())\n",
+    "    hatches = itertools.cycle(['/', '+', 'x', '-', '*', '//', '\\\\', 'o', 'O', '.'])\n",
+    "    for i, bar in enumerate(axes.patches):\n",
+    "        if i % num_apps == 0:\n",
+    "            hatch = next(hatches)\n",
+    "        bar.set_hatch(hatch)\n",
+    "    # g.set_hatch(next(hatches))\n",
     "    g.grid(False)\n",
     "    g.set_xlabel(\"\")\n",
     "    g.set_ylabel(m.upper(), rotation=90, size='large')\n",
     "    g.legend().set_title(\"\")\n",
+    "    #g.despine(left=True)\n",
+    "    # g.se    (\"\", m.upper())\n",
+    "    # g.legend.set_title(\"\")\n",
     "    plt.title(\"\")\n",
+    "    img_path = os.path.join(os.curdir,\"results\",\"images\")\n",
+    "    os.makedirs(img_path, exist_ok=True)\n",
+    "    save = None #f\"fig_rq1_barplots_{m}\"\n",
     "    if save is not None:\n",
-    "        plt.savefig(os.path.join(fig_path, \"{}.pdf\".format(save)),bbox_inches='tight')\n",
+    "        plt.savefig(os.path.join(img_path, \"{}.pdf\".format(save)),bbox_inches='tight')\n",
     "    plt.show()"
    ],
    "metadata": {
@@ -1350,16 +1333,58 @@
    }
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# RQ4"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   "execution_count": null,
+   "source": [
+    "# setup the variables\n",
+    "apps = [\"roller\", \"acmeair\", \"petclinic-legacy\", \"jforum\", \"plants\", \"daytrader\"]\n",
+    "window = 25"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def moving_average(a, n=3):\n",
+    "    ret = np.cumsum(a, dtype=float)\n",
+    "    ret[n:] = ret[n:] - ret[:-n]\n",
+    "    return list(ret[n - 1:] / n)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Generate the line plots\n",
+    "fig, ax = plt.subplots(figsize=(20, 10))\n",
+    "line_styles = ['-', '--', '-.', ':']\n",
+    "markers = ['o', 's', 'x', 'D']\n",
+    "for i, app in enumerate(apps):\n",
+    "    df_scores = pd.read_csv(os.path.join(\"data\", \"rq4\", app, \"scores.csv\"))\n",
+    "    smooth_scores = window*[None] + moving_average(df_scores[\"score\"].values, window)\n",
+    "    if i<len(line_styles):\n",
+    "        line_style = line_styles[i]\n",
+    "        sns.lineplot(x=range(len(smooth_scores)), y = smooth_scores, ax= ax, label=app, linestyle=line_style)\n",
+    "    else:\n",
+    "        marker = markers[i-len(line_styles)]\n",
+    "        sns.lineplot(x=range(len(smooth_scores)), y = smooth_scores, ax= ax, label=app, marker=marker)\n",
+    "plt.xlabel(\"episodes\")\n",
+    "plt.ylabel(\"final reward\")\n",
+    "file_path = os.path.join(\"figures\", \"fig_rq4_linechart.pdf\")\n",
+    "# fig.savefig(file_path, format='pdf', bbox_inches='tight') # Uncomment this line to save the figure\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
